added index method for 1C
